 * Reverse the new default behavior of Qt5 submenus, due to which, submenus are closed when the cursor leaves all menus.
 * Handle disabled icons independently so that they're dim everywhere (even with KDE icon engine, which doesn't call generatedIconPixmap() with SVG symbolic icons).
 * Added a workaround for "selectable disabled view items" (Qt Creator can have such items with cmake projects).

V0.10.5
---------
 * Don't draw the groove of a transient scrollbar.
 * Reduced the selection tint to 20%.
 * No repeating pattern for menu separators.
 * Removed "Attached active tab..." from Kvantum Manager because it may spoil the theme.
 * Added keys for scrollbar extent and toolbar grouping to Kvantum Manager.
 * Ensure total transparency for the last frame of the transient scrollbar animation.
 * Don't let transient scrollbars overlap the frames of their views.
 * Localization.
 * Changed the keys "size.minwidth" and "size.minheight" to "min_width" and "min_height" respectively and added support for setting their values in terms of app font height and also as increments.
 * Ability to set frame expansion in terms of app font height (for total roundness to be independent of font size).
 * Ability to set active_tab_overlap in terms of app font height.
 * Suppressed GCC7 compilation warnings about "-Wimplicit-fallthrough=". (Red Hat again! Do they think people are stupid?)
 * Added optional toggle and press text colors for menu(-bar) items. The fallback is focus color.
 * Added a key for a 25% translucent background for transient scrollbars when needed.
 * Compensated for menu shadows when positioning menus (thanks to Craig Drummond).
 * Give viewitem top and bottom margins (frame width + text margin) to combo popup items and make their background transparent.
 * Made the combo menu (popup as menu) exactly like a menu.
 * A key for removing checkboxes from combo menus.